Rimossa cartella img/square, aggiunta pagina recensioni

--- a/profilo.html
+++ b/profilo.html
@@ -69,7 +69,7 @@
                         <a href="profilo.html" class="list-group-item active"><i class="fa fa-user"></i> Profilo</a>
                         <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
                         <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="#" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="recensioni.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
                         <a href="#" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
@@ -85,7 +85,7 @@
 
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <h4>Pinco Pallino</h4>
+                                <h4>Dati personali</h4>
                             </div>
                             <div class="header-center">
                             </div>
@@ -121,7 +121,7 @@
                                     </tr>
                                     <tr>
                                         <td>Codice fiscale</td>
-                                        <td>PLLPN72A01H749U</td>
+                                        <td>PLLPNC72A01H749U</td>
                                     </tr>
                                     <tr>
                                         <td>Cellulare</td>
@@ -197,7 +197,7 @@
                             <table class="table">
                                 <tr>
                                     <td>Tipo</td>
-                                    <td>Postepay</td>
+                                    <td>Carta di credito</td>
                                 </tr>
                                 <tr>
                                     <td>Numero</td>
@@ -205,7 +205,7 @@
                                 </tr>
                                 <tr>
                                     <td>Scadenza</td>
-                                    <td>07/2019</td>
+                                    <td>11/2017</td>
                                 </tr>
                                 <tr>
                                     <td>Intestatario</td>
