--- a/recensioni.html
+++ b/recensioni.html
@@ -51,7 +51,7 @@
                         <li><a href="index.html">Home</a>
                         </li>
                         <li>Area Personale</li>
-                        <li class="active">I miei acquisti</li>
+                        <li class="active">Le mie recensioni</li>
                     </ol>
                 </div>
             </div>
@@ -68,8 +68,8 @@
                         <span class="list-group-item list-group-item-default">Area personale</span>
                         <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
                         <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
-                        <a href="acquisti.html" class="list-group-item active"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="recensioni.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="recensioni.html" class="list-group-item active"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
                         <a href="#" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
@@ -89,7 +89,7 @@
                             <div class="header-center">
                             </div>
                             <div class="pull-right">
-                                <h4>dal 11-07-2014 al 21-07-2014</h4>
+                                <h4>30-07-2014</h4>
                             </div>
                             <div class="clearfix"></div>
                         </div>
@@ -97,13 +97,21 @@
                             <img src="img/maldive550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
-                                <p>2 adulti - 1 bambino</p>
-                                <p>Totale: EUR 2100,00 - VISA</p>
-                                <p>Transazione # 404-2941210-6149129</p>
-                                <p>Effettuata il: 22-04-2014</p>
-                                <hr/>
-                                <button type="button" class="btn btn-default">Scarica fattura</button>
-                                <button type="button" class="btn btn-default">Modifica recensione</button>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <hr style="margin-bottom: 5px;" />
+                                <div>
+                                    <img class="review-upload-thumnb" src="img/maldive_mocked_upload_1.png" />
+                                    <img class="review-upload-thumnb" src="img/maldive_mocked_upload_2.png" />
+                                    <img class="review-upload-thumnb" src="img/maldive_mocked_upload_3.png" />
+                                    <img class="review-upload-thumnb" src="img/maldive_mocked_upload_4.png" />
+                                    <p class="help-block">Fai click su una foto per rimuoverla</p>
+                                </div>
+                                <hr />
+                                <div>
+                                    <button type="button" class="btn btn-default">Carica foto</button>
+                                    <button type="button" class="btn btn-default">Modifica</button>
+                                    <button type="button" class="btn btn-default">Rimuovi</button>
+                                </div>
                             </div>
 
                         </div>
@@ -119,7 +127,6 @@
                             <div class="header-center">
                             </div>
                             <div class="pull-right">
-                                <h4>dal 27-12-2010 al 03-01-2011</h4>
                             </div>
                             <div class="clearfix"></div>
                         </div>
@@ -127,13 +134,15 @@
                             <img src="img/alaska550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
-                                <p>2 adulti</p>
-                                <p>Totale: EUR 1600,00 - VISA</p>
-                                <p>Transazione # 404-2941210-0056455</p>
-                                <p>Effettuata il: 13-08-2010</p>
-                                <hr/>
-                                <button type="button" class="btn btn-default">Scarica fattura</button>
-                                <button type="button" class="btn btn-default">Scrivi una recensione</button>
+                                <form>
+                                    <div class="form-group">
+                                        <textarea class="form-control" rows="6" placeholder="Com'è stata la tua vacanza?"></textarea>
+                                    </div>
+                                    <div>
+                                        <button type="button" class="btn btn-default">Carica foto</button>
+                                        <button type="button" class="btn btn-default">Pubblica</button>
+                                    </div>
+                                </form>
                             </div>
 
                         </div>
