--- a/carrello.html
+++ b/carrello.html
@@ -69,7 +69,7 @@
                         <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
                         <a href="carrello.html" class="list-group-item active"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
                         <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
-                        <a href="#" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
+                        <a href="recensioni.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
                         <a href="#" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
@@ -99,7 +99,7 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/square/australia550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="img/australia550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
                                 <p>2 adulti - 2 bambini</p>
@@ -130,7 +130,7 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/square/maldive550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="img/maldive550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
                                 <div class="alert alert-warning" role="alert">
@@ -149,8 +149,6 @@
 
                         </div>
                     </div>
-
-                    <hr/>
 
                     <!-- ACQUISTA TUTTO -->
 
