Aggiunta pagina impostazioni

--- a/navbar.html
+++ b/navbar.html
@@ -60,7 +60,7 @@
                     </ul>
                 </li>
 
-                <li><a href="recensioni.html">Recensioni</a>
+                <li><a href="#">Recensioni</a>
                 </li>
 
                 <li><a href="blog.html">Blog</a>
