--- a/impostazioni.html
+++ b/impostazioni.html
@@ -51,7 +51,7 @@
                         <li><a href="index.html">Home</a>
                         </li>
                         <li>Area Personale</li>
-                        <li class="active">I miei acquisti</li>
+                        <li class="active">Impostazioni</li>
                     </ol>
                 </div>
             </div>
@@ -68,9 +68,9 @@
                         <span class="list-group-item list-group-item-default">Area personale</span>
                         <a href="profilo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo</a>
                         <a href="carrello.html" class="list-group-item"><i class="fa fa-shopping-cart"></i><span class="badge">2</span> Carrello</a>
-                        <a href="acquisti.html" class="list-group-item active"><i class="md md-credit-card"></i> I miei acquisti</a>
+                        <a href="acquisti.html" class="list-group-item"><i class="md md-credit-card"></i> I miei acquisti</a>
                         <a href="recensioni.html" class="list-group-item"><i class="fa fa-smile-o"></i> Le mie recensioni</a>
-                        <a href="impostazioni.html" class="list-group-item"><i class="fa fa-cog"></i> Impostazioni</a>
+                        <a href="impostazioni.html" class="list-group-item active"><i class="fa fa-cog"></i> Impostazioni</a>
                     </div>
 
                 </div>
@@ -79,68 +79,73 @@
 
                 <div class="col-md-9">
 
-                    <!-- MALDIVE -->
+                    <!-- DETTAGLI PERSONALI -->
 
                     <div class="panel panel-default">
+
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <h4>Maldive</h4>
+                                <h4>Impostazioni</h4>
                             </div>
                             <div class="header-center">
                             </div>
                             <div class="pull-right">
-                                <h4>dal 11-07-2014 al 21-07-2014</h4>
                             </div>
                             <div class="clearfix"></div>
                         </div>
+
                         <div class="panel-body">
-                            <img src="img/maldive550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
-
-                            <div class="purchase-item-details">
-                                <p>2 adulti - 1 bambino</p>
-                                <p>Totale: EUR 2100,00 - VISA</p>
-                                <p>Transazione # 404-2941210-6149129</p>
-                                <p>Effettuata il: 22-04-2014</p>
-                                <hr/>
-                                <button type="button" class="btn btn-default">Scarica fattura</button>
-                                <button type="button" class="btn btn-default">Modifica recensione</button>
-                            </div>
-
-                        </div>
-                    </div>
-
-                    <!-- ALASKA -->
-
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            <div class="pull-left">
-                                <h4>Alaska</h4>
-                            </div>
-                            <div class="header-center">
-                            </div>
-                            <div class="pull-right">
-                                <h4>dal 27-12-2010 al 03-01-2011</h4>
-                            </div>
-                            <div class="clearfix"></div>
-                        </div>
-                        <div class="panel-body">
-                            <img src="img/alaska550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
-
-                            <div class="purchase-item-details">
-                                <p>2 adulti</p>
-                                <p>Totale: EUR 1600,00 - VISA</p>
-                                <p>Transazione # 404-2941210-0056455</p>
-                                <p>Effettuata il: 13-08-2010</p>
-                                <hr/>
-                                <button type="button" class="btn btn-default">Scarica fattura</button>
-                                <button type="button" class="btn btn-default">Scrivi una recensione</button>
-                            </div>
+                            <table class="table">
+                                <tr>
+                                    <td>Avvisami quando</td>
+                                    <td>
+                                        <div>
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox">Viene inserito un nuovo viaggio
+                                                </label>
+                                            </div>
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox" checked>Viene inserita una nuova offerta
+                                                </label>
+                                            </div>
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox" checked>Il prezzo di un elemento nel carrello cambia
+                                                </label>
+                                            </div>
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox">Qualcuno risponde ad una mia recensione
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Avvisami per</td>
+                                    <td>
+                                        <div>
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox" checked>EMail
+                                                </label>
+                                            </div>
+                                            <div class="checkbox">
+                                                <label>
+                                                    <input type="checkbox">Cellulare
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
 
                         </div>
                     </div>
 
                 </div>
-
             </div>
         </div>
 
@@ -154,6 +159,7 @@
 
     <script src="js/bootstrap.min.js"></script>
     <!-- <script src="js/docs.min.js"></script> -->
+
     <!-- scripts parts -->
 
     <script>
