--- a/carrello.html
+++ b/carrello.html
@@ -115,12 +115,12 @@
                         </div>
                     </div>
 
-                    <!-- MALDIVE -->
+                    <!-- PARIGI -->
 
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <div class="pull-left">
-                                <h4>Maldive</h4>
+                                <h4>Parigi</h4>
                             </div>
                             <div class="header-center">
                             </div>
@@ -130,7 +130,7 @@
                             <div class="clearfix"></div>
                         </div>
                         <div class="panel-body">
-                            <img src="img/maldive550x550.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
+                            <img src="img/parigi2194x2194.jpg" class="purchase-item-thumbnail fixed hidden-xs" />
 
                             <div class="purchase-item-details">
                                 <div class="alert alert-warning" role="alert">
