--- a/business.html
+++ b/business.html
@@ -60,8 +60,8 @@
 
                     <div class="list-group">
                         <a href="chi_siamo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo aziendale</a>
-                        <a href="business.html" class="list-group-item heading list-group-item-success"><i class="md md-insert-chart"></i> Business</a>
-                        <a href="tof.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
+                        <a href="business.html" class="list-group-item active"><i class="md md-insert-chart"></i> Business</a>
+                        <a href="tos.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
                         <a href="sicurezza.html" class="list-group-item"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
                         <a href="contatti.html" class="list-group-item"><i class="md md-email"></i> Contatti</a>
                     </div>
