--- a/chi_siamo.html
+++ b/chi_siamo.html
@@ -60,9 +60,9 @@
                     <!-- SIDE MENU -->
 
                     <div class="list-group">
-                        <a href="chi_siamo.html" class="list-group-item heading list-group-item-success"><i class="fa fa-user"></i> Profilo aziendale</a>
+                        <a href="chi_siamo.html" class="list-group-item active"><i class="fa fa-user"></i> Profilo aziendale</a>
                         <a href="business.html" class="list-group-item"><i class="md md-insert-chart"></i> Business</a>
-                        <a href="tof.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
+                        <a href="tos.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
                         <a href="sicurezza.html" class="list-group-item"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
                         <a href="contatti.html" class="list-group-item"><i class="md md-email"></i> Contatti</a>
                     </div>
@@ -79,19 +79,18 @@
                         <li>
                             <h1 id="logo_profile">Glas Travels </h1>
                         </li>
-                        <li>
-                            <h1><small> Chi siamo. </small></h1>
-                        </li>
-
-                        <p id="descrizione">Compagnia di viaggi da poco sul mercato, che già non ha tradito i clienti che l'hanno scelta.
-                            <br>Fondata nel 2014 da quattro giovani ragazzi, Giorgia, Luca, Aleksandar e Sergio (da qui il nome Glas) ha fin da subito investito per poter dare il massimo ai propri clienti, compresi anche quelli un po' più esigenti.
-                            <br>In un solo anno, ha saputo soddisfare le esigenze di tutti creando scompiglio fra la concorrenza. Essendo l'agenzia <em>Glas Travels</em> operativa solo online, il sito è stato ottimizzato anche per mobile permettendo all'utente di scegliersi un tutto e per tutto il proprio viaggio comodamente da casa o da telefono/tablet.</p>
-                        <hr>
-                        <h1><small> Perchè noi. </small></h1>
-                        <p id="descrizione">Viaggi all’insegna della conoscenza approfondita di una destinazione, viaggi pensati per suscitare emozioni e liberare fantasie. Itinerari che conducono attraverso storia, tecnologia e abitudini. Occasioni che vogliamo i nostri clienti colgano per confrontarsi con realtà particolarmente diverse da quelle che appartengono a tutti noi. In ogni nostra proposta non deve, in ogni caso, mancare lo stimolo culturale che saprà conquistare sia chi si avvicina per la prima volta ad un viaggio fuori dal proprio Paese, sia a chi, come noi, ne è da sempre un grandissimo appassionato. Guidarvi su di una strada nuova o in parte conosciuta, solo di rado è un mestiere, spesso è una passione. La differenza crediamo si possa sentire.
-                            <br>
-                            <br>Nell’augurarci di potervi avere tra i nostri clienti vogliamo che lasciate a casa ogni preoccupazione, vi vogliamo coccolati e, soprattutto, vogliamo che anche voi arriviate ad avere sempre maggiori curiosità, così come a noi capita ancora oggi di averne! È per tutti questi motivi, e per molti altri ancora, che abbiamo elaborato diverse proposte di viaggio per farvi vivere e vedere quello che noi stessi amiamo e vorremmo vedeste. Venite quindi con noi, con la nostra passione, a riscoprire cosa si trova nel mondo!</p>
                     </div>
+
+                    <h1><small> Chi siamo. </small></h1>
+
+                    <p id="descrizione">Compagnia di viaggi da poco sul mercato, che già non ha tradito i clienti che l'hanno scelta.
+                        <br>Fondata nel 2014 da quattro giovani ragazzi, Giorgia, Luca, Aleksandar e Sergio (da qui il nome Glas) ha fin da subito investito per poter dare il massimo ai propri clienti, compresi anche quelli un po' più esigenti.
+                        <br>In un solo anno, ha saputo soddisfare le esigenze di tutti creando scompiglio fra la concorrenza. Essendo l'agenzia <em>Glas Travels</em> operativa solo online, il sito è stato ottimizzato anche per mobile permettendo all'utente di scegliersi un tutto e per tutto il proprio viaggio comodamente da casa o da telefono/tablet.</p>
+                    <hr>
+                    <h1><small> Perchè noi. </small></h1>
+                    <p id="descrizione">Viaggi all’insegna della conoscenza approfondita di una destinazione, viaggi pensati per suscitare emozioni e liberare fantasie. Itinerari che conducono attraverso storia, tecnologia e abitudini. Occasioni che vogliamo i nostri clienti colgano per confrontarsi con realtà particolarmente diverse da quelle che appartengono a tutti noi. In ogni nostra proposta non deve, in ogni caso, mancare lo stimolo culturale che saprà conquistare sia chi si avvicina per la prima volta ad un viaggio fuori dal proprio Paese, sia a chi, come noi, ne è da sempre un grandissimo appassionato. Guidarvi su di una strada nuova o in parte conosciuta, solo di rado è un mestiere, spesso è una passione. La differenza crediamo si possa sentire.
+                        <br>
+                        <br>Nell’augurarci di potervi avere tra i nostri clienti vogliamo che lasciate a casa ogni preoccupazione, vi vogliamo coccolati e, soprattutto, vogliamo che anche voi arriviate ad avere sempre maggiori curiosità, così come a noi capita ancora oggi di averne! È per tutti questi motivi, e per molti altri ancora, che abbiamo elaborato diverse proposte di viaggio per farvi vivere e vedere quello che noi stessi amiamo e vorremmo vedeste. Venite quindi con noi, con la nostra passione, a riscoprire cosa si trova nel mondo!</p>
                 </div>
                 <!-- /.ROW -->
 
