--- a/sicurezza.html
+++ b/sicurezza.html
@@ -62,8 +62,8 @@
                     <div class="list-group">
                         <a href="chi_siamo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo aziendale</a>
                         <a href="business.html" class="list-group-item"><i class="md md-insert-chart"></i> Business</a>
-                        <a href="tof.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
-                        <a href="sicurezza.html" class="list-group-item list-group-item heading list-group-item-success"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
+                        <a href="tos.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
+                        <a href="sicurezza.html" class="list-group-item list-group-item active"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
                         <a href="contatti.html" class="list-group-item"><i class="md md-email"></i> Contatti</a>
                     </div>
 
@@ -72,15 +72,11 @@
                 <!-- COLUMN CONTENT -->
 
                 <div class="col-md-6">
-                    <div class="row list-inline" id="chi_siamo_row">
-                        <li>
-                            <h1><small>Sicurezza &amp; Privacy. </small></h1>
-                        </li>
+                    <h1><small>Sicurezza &amp; Privacy. </small></h1>
 
-                        <p id="descrizione">
+                    <p id="descrizione">
 
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut neque arcu. Nunc hendrerit velit id massa ultricies aliquam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam imperdiet pulvinar arcu, in consequat leo sodales nec. Quisque eu odio laoreet, tempus lorem id, ornare diam. Sed vel arcu ligula. Curabitur mattis libero sit amet cursus vulputate. Nullam condimentum ligula sapien, quis tristique felis imperdiet ac. Phasellus arcu tellus, luctus in fermentum sed, iaculis ac massa. Phasellus dui magna, pulvinar id erat mattis, dictum hendrerit nibh. Praesent sed tellus auctor, egestas diam sit amet, lacinia sapien. Etiam vitae quam eleifend dui convallis auctor. Suspendisse elementum cursus massa, eu vehicula diam rutrum sed. Phasellus in magna ornare, viverra elit sed, fringilla nibh. Nullam gravida erat id sapien molestie convallis. Sed id malesuada est. Ut ac rhoncus sapien. Aenean fringilla maximus nunc, in bibendum risus. Duis lobortis dui vel lacus bibendum, sit amet tincidunt diam interdum. Praesent luctus dapibus dui nec maximus. Nullam at risus ac dolor laoreet egestas quis non lorem. Maecenas sit amet purus lacus. Aliquam consequat nisl et interdum rutrum. Quisque non ultrices ex, in pretium odio. Quisque tempus leo sed tellus tincidunt pulvinar. Etiam cursus rhoncus quam, quis feugiat odio molestie non. Donec quam eros, dapibus id magna faucibus, gravida maximus orci. Sed id ligula at mauris accumsan lacinia. Suspendisse semper velit ut nisi lobortis lacinia. Proin ut libero ac nunc tincidunt malesuada nec sed neque. Etiam laoreet tincidunt leo, ut consectetur eros elementum nec. Suspendisse luctus sapien dignissim massa consectetur placerat. Sed et tempor massa. Pellentesque sit amet aliquam lacus. Mauris scelerisque tincidunt pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam porta tincidunt scelerisque. Aenean nec convallis lorem. Proin efficitur, neque vel convallis interdum, ipsum sapien sollicitudin ipsum, sed luctus diam lacus ac justo.</p>
-                    </div>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut neque arcu. Nunc hendrerit velit id massa ultricies aliquam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam imperdiet pulvinar arcu, in consequat leo sodales nec. Quisque eu odio laoreet, tempus lorem id, ornare diam. Sed vel arcu ligula. Curabitur mattis libero sit amet cursus vulputate. Nullam condimentum ligula sapien, quis tristique felis imperdiet ac. Phasellus arcu tellus, luctus in fermentum sed, iaculis ac massa. Phasellus dui magna, pulvinar id erat mattis, dictum hendrerit nibh. Praesent sed tellus auctor, egestas diam sit amet, lacinia sapien. Etiam vitae quam eleifend dui convallis auctor. Suspendisse elementum cursus massa, eu vehicula diam rutrum sed. Phasellus in magna ornare, viverra elit sed, fringilla nibh. Nullam gravida erat id sapien molestie convallis. Sed id malesuada est. Ut ac rhoncus sapien. Aenean fringilla maximus nunc, in bibendum risus. Duis lobortis dui vel lacus bibendum, sit amet tincidunt diam interdum. Praesent luctus dapibus dui nec maximus. Nullam at risus ac dolor laoreet egestas quis non lorem. Maecenas sit amet purus lacus. Aliquam consequat nisl et interdum rutrum. Quisque non ultrices ex, in pretium odio. Quisque tempus leo sed tellus tincidunt pulvinar. Etiam cursus rhoncus quam, quis feugiat odio molestie non. Donec quam eros, dapibus id magna faucibus, gravida maximus orci. Sed id ligula at mauris accumsan lacinia. Suspendisse semper velit ut nisi lobortis lacinia. Proin ut libero ac nunc tincidunt malesuada nec sed neque. Etiam laoreet tincidunt leo, ut consectetur eros elementum nec. Suspendisse luctus sapien dignissim massa consectetur placerat. Sed et tempor massa. Pellentesque sit amet aliquam lacus. Mauris scelerisque tincidunt pellentesque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nullam porta tincidunt scelerisque. Aenean nec convallis lorem. Proin efficitur, neque vel convallis interdum, ipsum sapien sollicitudin ipsum, sed luctus diam lacus ac justo.</p>
                 </div>
                 <!-- /.ROW -->
 
