--- a/navbar.html
+++ b/navbar.html
@@ -51,7 +51,7 @@
                         </li>
                         <li><a href="business.html">Business</a>
                         </li>
-                        <li><a href="tof.html">Termini e Condizioni</a>
+                        <li><a href="tos.html">Termini e Condizioni</a>
                         </li>
                         <li><a href="privacy.html">Sicurezza &amp; Privacy</a>
                         </li>
