--- a/sicurezza.html
+++ b/sicurezza.html
@@ -47,7 +47,8 @@
             <ol class="breadcrumb" id="path">
                 <li><a href="index.html">Home</a>
                 </li>
-                <li class="active">Azienda</li>
+                <li>Azienda</li>
+                <li class="active">Sicurezza &amp; Privacy</li>
             </ol>
 
 
