--- a/business.html
+++ b/business.html
@@ -47,7 +47,8 @@
             <ol class="breadcrumb" id="path">
                 <li><a href="index.html">Home</a>
                 </li>
-                <li class="active">Azienda</li>
+                <li>Azienda</li>
+                <li class="active">Business</li>
             </ol>
 
             <!-- PAGE CONTENT ROW -->
