--- a/sicurezza.html
+++ b/sicurezza.html
@@ -64,8 +64,14 @@
                         <a href="chi_siamo.html" class="list-group-item"><i class="fa fa-user"></i> Profilo aziendale</a>
                         <a href="business.html" class="list-group-item"><i class="md md-insert-chart"></i> Business</a>
                         <a href="tos.html" class="list-group-item"><i class="md md-info-outline"></i> Termini e Condizioni</a>
-                        <a href="sicurezza.html" class="list-group-item list-group-item active"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
-                        <a href="contatti.html" class="list-group-item"><i class="md md-email"></i> Contatti</a>
+                        <a href="sicurezza.html" class="list-group-item active"><i class="md md-vpn-lock"></i> Sicurezza &amp; Privacy</a>
+                        <a href="contatti.html" class="list-group-item"><i class="md md-email" data-toggle="collapse"></i> Contatti</a>
+                        <a href="#sottomenu" class="list-group-item" data-toggle="collapse"><i class="md md-work"></i> Lavora con Noi</a>
+                        <div class="collapse" id="sottomenu">
+                            <a href="lavori_stagionali.html" class="list-group-item">Lavori stagionali</a>
+                            <a href="studenti.html" class="list-group-item">Studenti</a>
+                            <a href="stage.html" class="list-group-item">Opportunità di stage</a>
+                        </div>
                     </div>
 
                 </div>
