3 nuove pagine + file uploader a parte e vari fix

--- a/business.html
+++ b/business.html
@@ -67,9 +67,9 @@
                         <a href="contatti.html" class="list-group-item"><i class="md md-email" data-toggle="collapse"></i> Contatti</a>
                         <a href="#sottomenu" class="list-group-item" data-toggle="collapse"><i class="md md-work"></i> Lavora con Noi</a>
                         <div class="collapse" id="sottomenu">
-                            <a href="lavori_stagionali.html" class="list-group-item">Lavori stagionali</a>
-                            <a href="studenti.html" class="list-group-item">Studenti</a>
-                            <a href="stage.html" class="list-group-item">Opportunità di stage</a>
+                            <a href="lavori_stagionali.html" class="list-group-item">&#9679; Lavori stagionali</a>
+                            <a href="studenti.html" class="list-group-item">&#9679; Studenti</a>
+                            <a href="stage.html" class="list-group-item">&#9679; Opportunità di stage</a>
                         </div>
                     </div>
 
@@ -86,7 +86,7 @@
 
                     <hr>
                     <h1><small>Trasparenza. </small></h1>
-                    <p id="descrizione ">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut neque arcu. Nunc hendrerit velit id massa ultricies aliquam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam imperdiet pulvinar arcu, in consequat leo sodales nec. Quisque eu odio laoreet, tempus lorem id, ornare diam. Sed vel arcu ligula. Curabitur mattis libero sit amet cursus vulputate. Nullam condimentum ligula sapien, quis tristique felis imperdiet ac. Phasellus arcu tellus, luctus in fermentum sed, iaculis ac massa. Phasellus dui magna, pulvinar id erat mattis, dictum hendrerit nibh. Praesent sed tellus auctor, egestas diam sit amet, lacinia sapien. Etiam vitae quam eleifend dui convallis auctor. Suspendisse elementum cursus massa, eu vehicula diam rutrum sed. Phasellus in magna ornare, viverra elit sed, fringilla nibh. </p>
+                    <p id="descrizione">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut neque arcu. Nunc hendrerit velit id massa ultricies aliquam. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Etiam imperdiet pulvinar arcu, in consequat leo sodales nec. Quisque eu odio laoreet, tempus lorem id, ornare diam. Sed vel arcu ligula. Curabitur mattis libero sit amet cursus vulputate. Nullam condimentum ligula sapien, quis tristique felis imperdiet ac. Phasellus arcu tellus, luctus in fermentum sed, iaculis ac massa. Phasellus dui magna, pulvinar id erat mattis, dictum hendrerit nibh. Praesent sed tellus auctor, egestas diam sit amet, lacinia sapien. Etiam vitae quam eleifend dui convallis auctor. Suspendisse elementum cursus massa, eu vehicula diam rutrum sed. Phasellus in magna ornare, viverra elit sed, fringilla nibh. </p>
                 </div>
                 <!-- /.ROW -->
 
