--- a/footer.html
+++ b/footer.html
@@ -34,7 +34,7 @@
                                     <br/>
                                     <a href="contatti.html">Sede e contatti</a>
                                     <br/>
-                                    <a href="lavora_con_noi.html">Lavora con noi</a>
+                                    <a href="lavori_stagionali.html">Lavora con noi</a>
                                 </p>
                             </li>
                         </div>
