--- a/navbar.html
+++ b/navbar.html
@@ -57,6 +57,8 @@
                         </li>
                         <li><a href="contatti.html">Contattaci</a>
                         </li>
+                        <li><a href="lavori_stagionali.html">Lavora con Noi</a>
+                        </li>
                     </ul>
                 </li>
 
