Aggiunta pagina FAQ

--- a/footer.html
+++ b/footer.html
@@ -54,7 +54,7 @@
                                 <p class="white">Link utili</p>
                                 <p> <a href="#">Mappa del sito</a>
                                     <br/>
-                                    <a href="#">FAQ</a>
+                                    <a href="FAQ.html">FAQ</a>
                                     <br/>
                                     <a href="#">EULA</a>
                                     <br/>
