Sistemata navbar, aggiunto login

--- a/impostazioni.html
+++ b/impostazioni.html
@@ -129,12 +129,12 @@
                                         <div>
                                             <div class="checkbox">
                                                 <label>
-                                                    <input type="checkbox" checked>EMail
+                                                    <input type="checkbox" checked>Email
                                                 </label>
                                             </div>
                                             <div class="checkbox">
                                                 <label>
-                                                    <input type="checkbox">Cellulare
+                                                    <input type="checkbox">SMS
                                                 </label>
                                             </div>
                                         </div>
