--- a/navbar.html
+++ b/navbar.html
@@ -24,7 +24,7 @@
         <!-- menu items -->
 
         <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav navbar-center">
 
                 <!-- Viaggi -->
 
@@ -68,24 +68,64 @@
                 <li><a href="blog.html">Blog</a>
                 </li>
 
-                <li><a href="profilo.html">Area Personale</a>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login<span style="margin-left: 5px;" class="fa fa-angle-down"></span></a>
+                    <ul class="dropdown-menu" role="menuitem" style="min-width: 250px;">
+                        <li>
+                            <form class="form" role="form" id="login">
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="fa fa-at" style="width: 15px;"></i></span>
+                                    <input type="text" class="form-control" placeholder="Email">
+                                </div>
+                                <div class="input-group">
+                                    <span class="input-group-addon"><i class="fa fa-lock" style="width: 15px;"></i></span>
+                                    <input type="text" class="form-control" placeholder="Password">
+                                </div>
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox">Ricordami
+                                    </label>
+                                </div>
+                                <button class="btn btn-success btn-block">Accedi</button>
+                                <button type="button" class="btn btn-primary btn-block"><span class="fa fa-facebook" style="width: 15px;"></span> Accedi con Facebook
+                                </button>
+                            </form>
+                        </li>
+                    </ul>
                 </li>
+
                 <li><a href="carrello.html"><i class="fa fa-shopping-cart"></i> <span class="badge">2</span></a>
                 </li>
             </ul>
 
-            <ul class="nav navbar-nav navbar-right visible-sm">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-search"></span></a>
-                    <ul class="dropdown-menu" role="menu">
+            <ul class="nav navbar-nav navbar-right">
+
+                <!-- search bar visibile -->
+
+                <form class="navbar-form navbar-right visible-lg visible-md visible-xs ">
+                    <div class="input-group ">
+                        <input type="Search " placeholder="Cosa stai cercando? " class="form-control " />
+                        <div class="input-group-btn ">
+                            <button class="btn btn-info ">
+                                <span class="fa fa-search "></span>
+                            </button>
+                        </div>
+                    </div>
+                </form>
+
+                <!-- search bar a scomparsa -->
+
+                <li class="dropdown visible-sm ">
+                    <a href="# " class="dropdown-toggle " data-toggle="dropdown "><span class="fa fa-search "></span></a>
+                    <ul class="dropdown-menu" role="menuitem">
                         <li>
-                            <form class="navbar-form navbar-left visible-sm" role="search">
-                                <div class="form-group">
-                                    <div class="input-group">
-                                        <input type="Search" style="width: 240px;" placeholder="Cosa stai cercando?" class="form-control" />
-                                        <div class="input-group-btn">
-                                            <button class="btn btn-info">
-                                                <span class="fa fa-search"></span>
+                            <form class="navbar-form navbar-left visible-sm " role="search ">
+                                <div class="form-group ">
+                                    <div class="input-group ">
+                                        <input type="Search " style="width: 240px; " placeholder="Cosa stai cercando? " class="form-control " />
+                                        <div class="input-group-btn ">
+                                            <button class="btn btn-info ">
+                                                <span class="fa fa-search "></span>
                                             </button>
                                         </div>
                                     </div>
@@ -94,20 +134,8 @@
                         </li>
                     </ul>
                 </li>
+
             </ul>
-
-            <!-- search bar -->
-
-            <form class="navbar-form navbar-right visible-lg visible-md visible-xs">
-                <div class="input-group">
-                    <input type="Search" placeholder="Cosa stai cercando?" class="form-control" />
-                    <div class="input-group-btn">
-                        <button class="btn btn-info">
-                            <span class="fa fa-search"></span>
-                        </button>
-                    </div>
-                </div>
-            </form>
 
         </div>
     </div>
